# open62541Tutorial

./: 07_connect_variables_and_methods_to_logic.md  08_variable_callbacks.md  09_multi_threading.md  11_cmake.md  12_systemd_service.md  README.md
Latex/RaspberryOpen62541/: RaspberryOpen62541.tex  export.md
Latex/RaspberryOpen62541/Kapitel/: 11_Einleitung.tex  12_Hauptteil.tex
examples/MotorController/: CMakeLists.txt  MotorSteuerung.c  MotorSteuerung.h  MotorSteuerungNodeSet.xml  main.c
examples/PaintingStationBelt/: CMakeLists.txt  Callbacks.c  Callbacks.h  KpiCalculator.c  KpiCalculator.h  OpcUaHelper.c  OpcUaHelper.h  PaintingStationBelt.c  PaintingStationBelt.h  PaintingStationBelt.uamodel  PaintingStationBelt.xml  ReadMe.txt  main.c
examples/PaintingStationBelt/PythonScripts/: Belt.py  BrowseMonitorAndPrintDashboardData.py  BrowseMonitorAndPrintJson.py  InitBelt.py  TestBelt.py  TestLightSensor1.py  TestLightSensor2.py
